--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html lang="en">
 
 <head>
+ <?php
+echo “Selamat datang”;
+?>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
