--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
 		<li class="nav-item">
-                <a class="nav-link" href="responcontac.html">Respon Contact</a>
+                <a class="nav-link" href="responcontac.php">Respon Contact</a>
               </li>
             </ul>
             <div class="user_option-box">
